--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 #root {
   max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  margin: auto;
   text-align: center;
 }
 
@@ -39,4 +38,7 @@
 
 .read-the-docs {
   color: #888;
+}
+.btn-del{
+  color: red;
 }
