--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
 
@@ -39,4 +42,7 @@
 
 .read-the-docs {
   color: #888;
+}
+.ts{
+  color: red;
 }
